...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtMinCaloriesFilter"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
...
                app:errorEnabled="true"
                
                android:hint="Min Calories"
                app:layout_constraintTop_toBottomOf="@+id/dropdownGender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMinCaloriesFilter"
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtMinCarbohydrateFilter"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
...
                app:errorEnabled="true"
                
                android:hint="Min Carbohydrate"
                app:layout_constraintTop_toBottomOf="@+id/dropdownGender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMinCarbohydrateFilter"
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_height="wrap_content"
                android:text="to"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtMaxProteinFilter"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="65dp"
...
                
                android:hint="Max Protein"
                app:layout_constraintTop_toBottomOf="@+id/dropdownGender">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="0"
                    android:id="@+id/etMaxProteinFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_height="12dp"
            android:layout_marginVertical="2dp"
            android:background="#f2f2f2" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_nutrient_filter"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="Save Nutrient Filter"
        android:layout_margin="8dp"
...
