...
        />

    <LinearLayout
        android:id="@+id/layoutSearchIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnFilterNutrient"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/icon_search_ingredients"
            android:layout_width="36dp"
...
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Calories : "/>
            <TextView
                android:id="@+id/txtCaloriesShowFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:text="No Filter" />
            <TextView
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Carbohydrate : "/>
            <TextView
                android:id="@+id/txtCarbohydrateShowFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:text="No Filter" />
        </LinearLayout>
...
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Protein : "/>
            <TextView
                android:id="@+id/txtProteinShowFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:text="No Filter" />
        </LinearLayout>
...
        android:layout_marginVertical="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUsePhoto"
        android:background="#f2f2f2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ingridients_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
<!--        android:layout_marginEnd="8dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView8" />-->

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_search_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:contentDescription="desc"
        android:text="Search Recipe"
...
