...
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    app:menu="@menu/bottom_nav_menu" />
            </com.google.android.material.bottomappbar.BottomAppBar>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_black"
                app:layout_anchor="@+id/bottomappbar" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </FrameLayout>
...
